--July 29, 2009--
- Fixed saving/reloading layout ( still need some fixing with previewer dimensions btw )
- Now templates are installed under $KDEDIR/share/apps/plasmate/templates
- When creating a new project, PlasMate makes a copy of the corresponding template in the
  working directory, modify its file name and the main class to match the project name. 

--July 26, 2009--
- Added radio button to select the scripting language, connected KLineEdit::returnPressed()
  signal, saved docks position so the next time PlasMate is loaded, it reloads docks previous
  position ( need more fixing btw ).
- Added templated folder, with simple sources for plasmoid and data engines.

--July 25, 2009--
- The loading of a text editor at the Publish tab was unnecessary. Removed.
- Cancel button added to new project screen.

--July 21, 2009--
- Fixed the issue with the KRestrictedLine form; now it accepts correctly all names composed by
  characters a-z,A-Z,0-9, and "_", "."

--July 19, 2009--
- Added merge capabilities to TimeLine class.

--July 17, 2009--
- TimeLine now is able to create/delete branches, move to a selected commit ( creating also a new
  branch to preserve other commits ), restore the current state to whatever commit ( deleting all
  the commits performed after it, in the same branch ), init itself and save commits.

--July 14, 2009--
- Now the TimeLine sets-up a menu for each item, available by right-clicking on it: implemented the
  switch branch feature.

--July 12, 2009--
- Fixed a strange behaviour with GitRunner class which causes the app to continue runnig, even if
  the app is closed. Extended TimeLine class; now it shows in the main window the current branches
  and its related commits, and more infos are provided when moving the mouse over the icons.

--July 7, 2009--
- Fixed DvcsJob behaviour when are performed sequential calls, like in the unit test.
  Added the following action in the GitRunner class: remove, status, log, reset, newBranch,