@@ -79,9 +79,25 @@ It's time the desktop caught up with us.</string>
               <set>Qt::AlignCenter</set>
              </property>
              <property name="wordWrap">
-                <bool>true</bool>
+              <bool>true</bool>
              </property>
             </widget>
+           </item>
+           <item row="1" column="0" colspan="2">
+            <spacer name="verticalSpacer_5">
+             <property name="orientation">
+              <enum>Qt::Vertical</enum>
+             </property>
+             <property name="sizeType">
+              <enum>QSizePolicy::Minimum</enum>
+             </property>
+             <property name="sizeHint" stdset="0">
+              <size>
+               <width>20</width>
+               <height>20</height>
+              </size>
+             </property>
+            </spacer>
            </item>
            <item row="2" column="0" colspan="2">
             <layout class="QHBoxLayout" name="groupBoxesLayout">
@@ -288,17 +304,17 @@ It's time the desktop caught up with us.</string>
                 </layout>
                </widget>
                <widget class="QWidget" name="stackedWidgetPageTwo">
-                <widget class="QWidget" name="layoutWidget">
+                <widget class="QWidget" name="">
                  <property name="geometry">
                   <rect>
-                   <x>80</x>
-                   <y>5</y>
-                   <width>220</width>
-                   <height>511</height>
+                   <x>40</x>
+                   <y>0</y>
+                   <width>291</width>
+                   <height>481</height>
                   </rect>
                  </property>
-                 <layout class="QVBoxLayout" name="verticalLayout_5">
-                  <item>
+                 <layout class="QGridLayout" name="gridLayout_9">
+                  <item row="0" column="0">
                    <spacer name="verticalSpacer_3">
                     <property name="orientation">
                      <enum>Qt::Vertical</enum>
@@ -311,112 +327,138 @@ It's time the desktop caught up with us.</string>
                     </property>
                    </spacer>
                   </item>
-                  <item>
-                   <layout class="QHBoxLayout" name="horizontalLayout_5">
-                    <item>
-                     <spacer name="horizontalSpacer_6">
-                      <property name="orientation">
-                       <enum>Qt::Horizontal</enum>
-                      </property>
-                      <property name="sizeHint" stdset="0">
-                       <size>
-                        <width>13</width>
-                        <height>169</height>
-                       </size>
-                      </property>
-                     </spacer>
-                    </item>
-                    <item>
-                     <layout class="QFormLayout" name="formLayout">
-                      <item row="0" column="0">
-                       <widget class="QLabel" name="label">
-                        <property name="text">
-                         <string>Name:</string>
-                        </property>
-                       </widget>
-                      </item>
-                      <item row="0" column="1">
-                       <widget class="KLineEdit" name="projectName"/>
-                      </item>
-                      <item row="1" column="0" colspan="2">
-                       <widget class="QFrame" name="frame">
-                        <property name="frameShape">
-                         <enum>QFrame::StyledPanel</enum>
-                        </property>
-                        <property name="frameShadow">
-                         <enum>QFrame::Raised</enum>
-                        </property>
-                        <layout class="QVBoxLayout" name="verticalLayout_3">
+                  <item row="1" column="0">
+                   <widget class="QGroupBox" name="groupBox_3">
+                    <property name="sizePolicy">
+                     <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
+                      <horstretch>0</horstretch>
+                      <verstretch>0</verstretch>
+                     </sizepolicy>
+                    </property>
+                    <property name="title">
+                     <string>New project...</string>
+                    </property>
+                    <layout class="QGridLayout" name="gridLayout_8">
+                     <item row="0" column="0">
+                      <layout class="QGridLayout" name="gridLayout_7">
+                       <item row="0" column="0">
+                        <widget class="QLabel" name="labelName">
+                         <property name="text">
+                          <string>Name:</string>
+                         </property>
+                        </widget>
+                       </item>
+                       <item row="0" column="1" colspan="3">
+                        <widget class="KLineEdit" name="projectName"/>
+                       </item>
+                       <item row="4" column="0" colspan="4">
+                        <widget class="QFrame" name="frame">
+                         <property name="frameShape">
+                          <enum>QFrame::StyledPanel</enum>
+                         </property>
+                         <property name="frameShadow">
+                          <enum>QFrame::Raised</enum>
+                         </property>
+                         <layout class="QVBoxLayout" name="verticalLayout_3">
+                          <item>
+                           <widget class="QLabel" name="labelLanguage">
+                            <property name="text">
+                             <string>Language:</string>
+                            </property>
+                           </widget>
+                          </item>
+                          <item>
+                           <widget class="QRadioButton" name="radioButtonJs">
+                            <property name="text">
+                             <string>JavaScript</string>
+                            </property>
+                           </widget>
+                          </item>
+                          <item>
+                           <widget class="QRadioButton" name="radioButtonPy">
+                            <property name="text">
+                             <string>Python</string>
+                            </property>
+                            <property name="checked">
+                             <bool>true</bool>
+                            </property>
+                            <property name="autoRepeat">
+                             <bool>true</bool>
+                            </property>
+                           </widget>
+                          </item>
+                          <item>
+                           <widget class="QRadioButton" name="radioButtonRb">
+                            <property name="text">
+                             <string>Ruby</string>
+                            </property>
+                           </widget>
+                          </item>
+                         </layout>
+                        </widget>
+                       </item>
+                       <item row="5" column="0" colspan="4">
+                        <layout class="QHBoxLayout" name="horizontalLayout">
                          <item>
-                          <widget class="QLabel" name="label_4">
+                          <widget class="KPushButton" name="cancelNewProjectButton">
                            <property name="text">
-                            <string>Language:</string>
+                            <string>Cancel</string>
                            </property>
                           </widget>
                          </item>
                          <item>
-                          <widget class="QRadioButton" name="radioButtonJs">
+                          <widget class="KPushButton" name="newProjectButton">
                            <property name="text">
-                            <string>JavaScript</string>
-                           </property>
-                          </widget>
-                         </item>
-                         <item>
-                          <widget class="QRadioButton" name="radioButtonPy">
-                           <property name="text">
-                            <string>Python</string>
-                           </property>
-                           <property name="checked">
-                            <bool>true</bool>
-                           </property>
-                          </widget>
-                         </item>
-                         <item>
-                          <widget class="QRadioButton" name="radioButtonRb">
-                           <property name="text">
-                            <string>Ruby</string>
+                            <string>Create!</string>
                            </property>
                           </widget>
                          </item>
                         </layout>
-                       </widget>
-                      </item>
-                      <item row="2" column="0" colspan="2">
-                       <layout class="QHBoxLayout" name="horizontalLayout">
-                        <item>
-                         <widget class="KPushButton" name="cancelNewProjectButton">
-                          <property name="text">
-                           <string>Cancel</string>
-                          </property>
-                         </widget>
-                        </item>
-                        <item>
-                         <widget class="KPushButton" name="newProjectButton">
-                          <property name="text">
-                           <string>Create!</string>
-                          </property>
-                         </widget>
-                        </item>
-                       </layout>
-                      </item>
-                     </layout>
-                    </item>
-                    <item>
-                     <spacer name="horizontalSpacer_5">
-                      <property name="orientation">
-                       <enum>Qt::Horizontal</enum>
-                      </property>
-                      <property name="sizeHint" stdset="0">
-                       <size>
-                        <width>13</width>
-                        <height>169</height>
-                       </size>
-                      </property>
-                     </spacer>
-                    </item>
-                   </layout>
+                       </item>
+                       <item row="3" column="0" colspan="4">
+                        <layout class="QFormLayout" name="formLayout_2">
+                         <item row="0" column="0">
+                          <widget class="Line" name="line">
+                           <property name="orientation">
+                            <enum>Qt::Horizontal</enum>
+                           </property>
+                          </widget>
+                         </item>
+                         <item row="1" column="0">
+                          <widget class="QLabel" name="authorLabel">
+                           <property name="text">
+                            <string>Author:</string>
+                           </property>
+                          </widget>
+                         </item>
+                         <item row="1" column="1">
+                          <widget class="KLineEdit" name="authorTextField"/>
+                         </item>
+                         <item row="2" column="0">
+                          <widget class="QLabel" name="emailLabel">
+                           <property name="text">
+                            <string>Email:</string>
+                           </property>
+                          </widget>
+                         </item>
+                         <item row="2" column="1">
+                          <widget class="KLineEdit" name="emailTextField"/>
+                         </item>
+                        </layout>
+                       </item>
+                       <item row="1" column="0" colspan="4">
+                        <widget class="Line" name="line_2">
+                         <property name="orientation">
+                          <enum>Qt::Horizontal</enum>
+                         </property>
+                        </widget>
+                       </item>
+                      </layout>
+                     </item>
+                    </layout>
+                   </widget>
                   </item>
-                  <item>
+                  <item row="2" column="0">
                    <spacer name="verticalSpacer_4">
                     <property name="orientation">
                      <enum>Qt::Vertical</enum>
@@ -448,22 +490,6 @@ It's time the desktop caught up with us.</string>
               </spacer>
              </item>
             </layout>
-           </item>
-           <item row="1" column="0" colspan="2">
-            <spacer name="verticalSpacer_5">
-             <property name="orientation">
-              <enum>Qt::Vertical</enum>
-             </property>
-             <property name="sizeType">
-              <enum>QSizePolicy::Minimum</enum>
-             </property>
-             <property name="sizeHint" stdset="0">
-              <size>
-               <width>20</width>
-               <height>20</height>
-              </size>
-             </property>
-            </spacer>
            </item>
           </layout>
          </item>
@@ -527,11 +553,17 @@ It's time the desktop caught up with us.</string>
   </customwidget>
  </customwidgets>
  <tabstops>
-  <tabstop>recentProjects</tabstop>
-  <tabstop>contentTypes</tabstop>
-  <tabstop>kurlrequester</tabstop>
   <tabstop>projectName</tabstop>
+  <tabstop>authorTextField</tabstop>
+  <tabstop>emailTextField</tabstop>
+  <tabstop>radioButtonJs</tabstop>
+  <tabstop>radioButtonPy</tabstop>
+  <tabstop>radioButtonRb</tabstop>
+  <tabstop>newProjectButton</tabstop>
   <tabstop>cancelNewProjectButton</tabstop>
+  <tabstop>recentProjects</tabstop>
+  <tabstop>kurlrequester</tabstop>
+  <tabstop>contentTypes</tabstop>
  </tabstops>
  <resources>
   <include location="../../test.qrc"/>
