@@ -1,5 +1,5 @@
 /*
- *   Author: $AUTHOR <$MAIL>
+ *   Author: $AUTHOR <$EMAIL>
  *   Date: $DATE
  *
  *   This program is free software; you can redistribute it and/or modify
