@@ -1,6 +1,6 @@
 =begin
 /*
- *   Author: $AUTHOR <$MAIL>
+ *   Author: $AUTHOR <$EMAIL>
  *   Date: $DATE
  *
  *   This program is free software; you can redistribute it and/or modify
